--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <form class="calculator" name="calc">
             <input type="text" readonly class="input" name="txt">
             <span class="num clear" onclick="document.calc.txt.value = ''">C</span>
-            <span class="num" onclick="document.calc.txt.value += '/'">/</span>
-            <span class="num" onclick="document.calc.txt.value += '*'">*</span>
+            <span class="num divide" onclick="document.calc.txt.value += '/'">/</span>
+            <span class="num zarb" onclick="document.calc.txt.value += '*'">*</span>
             <span class="num" onclick="document.calc.txt.value += '7'">7</span>
             <span class="num" onclick="document.calc.txt.value += '8'">8</span>
             <span class="num" onclick="document.calc.txt.value += '9'">9</span>
-            <span class="num" onclick="document.calc.txt.value += '-'">-</span>
+            <span class="num mines" onclick="document.calc.txt.value += '-'">-</span>
             <span class="num" onclick="document.calc.txt.value += '4'">4</span>
             <span class="num" onclick="document.calc.txt.value += '5'">5</span>
             <span class="num" onclick="document.calc.txt.value += '6'">6</span>
