--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <input type="text" readonly class="input" name="txt">
             <span class="num clear" onclick="document.calc.txt.value = ''">C</span>
             <span class="num divide" onclick="document.calc.txt.value += '/'">/</span>
-            <span class="num zarb" onclick="document.calc.txt.value += '*'">*</span>
+            <span class="num zarb" onclick="document.calc.txt.value += 'X'">&#x2715</span>
             <span class="num" onclick="document.calc.txt.value += '7'">7</span>
             <span class="num" onclick="document.calc.txt.value += '8'">8</span>
             <span class="num" onclick="document.calc.txt.value += '9'">9</span>
